--- a/app/src/main/res/menu/bottom_menu_merchant.xml
+++ b/app/src/main/res/menu/bottom_menu_merchant.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/homeCustomerFragment"
+        android:id="@+id/homeMerchantFragment"
         android:icon="@drawable/ic_home"
         android:title="@string/label_home" />
+    <item
+        android:id="@+id/merchantReviewFragment"
+        android:icon="@drawable/ic_review"
+        android:title="@string/label_review" />
     <item
         android:id="@+id/bookingFragment"
         android:icon="@drawable/ic_booking"
