--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,9 +10,16 @@
         <item name="colorSecondaryVariant">@color/backgroundGrey</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="badgeStyle">@style/CustomBadge</item>
+    </style>
+
+    <!-- Splashscreen Theme -->
+    <style name="Theme.App.Starting" parent="Theme.AppCompat">
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
+        <item name="windowSplashScreenBackground">@color/ic_launcher_background</item>
+        <item name="postSplashScreenTheme">@style/Theme.Paradisonesia</item>
     </style>
 
     <!--    Style For Badge     -->
