--- a/app/src/main/res/layout/item_merchant_list_item.xml
+++ b/app/src/main/res/layout/item_merchant_list_item.xml
@@ -13,13 +13,14 @@
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/ll_calendar"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintVertical_weight="1"
-            app:layout_constraintStart_toStartOf="@+id/ll_date"
-            app:layout_constraintEnd_toEndOf="@+id/ll_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_product_merchant"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/tv_item_title"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/ll_date">
+            app:layout_constraintBottom_toBottomOf="parent"
+           >
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/iv_image_view"
@@ -27,45 +28,38 @@
                 android:layout_height="0dp"
                 android:background="@drawable/rounded_yellow" />
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-
-
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/ll_date"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:orientation="vertical"
-            android:background="@color/yellow_ffa216"
-            app:layout_constraintVertical_weight="1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/tv_item_title"
-            app:layout_constraintTop_toBottomOf="@+id/ll_calendar"
-            app:layout_constraintBottom_toBottomOf="parent">
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tv_item_clock"
-                android:layout_width="wrap_content"
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/ll_date"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/address"
-                style="@style/Text.Small"
-                android:textColor="@color/white" />
+                android:orientation="vertical"
+                android:background="@color/yellow_ffa216">
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tv_item_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/address"
-                style="@style/Text.Small"
-                android:textColor="@color/white" />
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tv_item_clock"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/address"
+                    style="@style/Text.Small"
+                    android:textColor="@color/white" />
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tv_item_month"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/address"
-                style="@style/Text.Small"
-                android:textColor="@color/white" />
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tv_item_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/address"
+                    style="@style/Text.Small"
+                    android:textColor="@color/white" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tv_item_month"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/address"
+                    style="@style/Text.Small"
+                    android:textColor="@color/white" />
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
