--- a/app/src/main/res/layout/layout_merchant_transaction.xml
+++ b/app/src/main/res/layout/layout_merchant_transaction.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
@@ -11,6 +11,4 @@
     android:layout_columnSpan="3"
     android:layout_row="1"
     tools:itemCount="3"
-    android:layout_gravity="center_horizontal">
-
-</androidx.recyclerview.widget.RecyclerView>
+    android:layout_gravity="center_horizontal"/>
