--- a/app/src/main/res/layout/item_merchant_list_item.xml
+++ b/app/src/main/res/layout/item_merchant_list_item.xml
@@ -15,51 +15,52 @@
             android:id="@+id/ll_calendar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:background="@drawable/ic_product_merchant"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/tv_item_title"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-           >
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/iv_image_view"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:background="@drawable/rounded_yellow" />
+            android:gravity="bottom"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:id="@+id/ll_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:gravity="bottom"
+                android:visibility="invisible"
                 android:background="@color/yellow_ffa216">
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tv_item_clock"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/address"
-                    style="@style/Text.Small"
-                    android:textColor="@color/white" />
+                    android:text="13:00"
+                    style="@style/Text.ExtraSmall"
+                    android:textColor="@color/white"
+                    android:gravity="center"/>
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tv_item_date"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/address"
-                    style="@style/Text.Small"
-                    android:textColor="@color/white" />
+                    android:text="01"
+                    style="@style/Text.ExtraLarge"
+                    android:textColor="@color/white"
+                    android:gravity="center"/>
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tv_item_month"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/address"
-                    style="@style/Text.Small"
-                    android:textColor="@color/white" />
+                    style="@style/Text.ExtraSmall"
+                    android:textColor="@color/white"
+                    android:gravity="center"/>
 
             </androidx.appcompat.widget.LinearLayoutCompat>
+
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
