--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
 
     <color name="backgroundGrey">#E5E5E5</color>
     <color name="yellow_ffa216">#FFA216</color>
+    <color name="trans_yellow_ffa216">#CCFFA216</color>
     <color name="blue_0063a7">#0063A7</color>
     <color name="grey_strong">#606060</color>
 
