--- a/app/src/main/res/layout/item_merchant_list_item.xml
+++ b/app/src/main/res/layout/item_merchant_list_item.xml
@@ -18,7 +18,6 @@
             android:orientation="vertical"
             android:background="@drawable/ic_product_merchant"
             app:layout_constraintStart_toStartOf="parent"
-
             android:gravity="bottom"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent">
@@ -29,7 +28,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="bottom"
-                android:visibility="invisible"
+
                 android:background="@color/yellow_ffa216">
 
                 <androidx.appcompat.widget.AppCompatTextView
@@ -74,13 +73,15 @@
             android:text="@string/product_name"
             style="@style/Text.Medium"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/ll_calendar" />
+            app:layout_constraintStart_toEndOf="@+id/ll_calendar"
+            android:layout_marginStart="@dimen/_10sdp"/>
 
         <View
             android:id="@+id/v_1"
             android:layout_width="0dp"
-            android:layout_height="2dp"
-
+            android:layout_height="1.5dp"
+            android:background="@color/grey"
+            android:layout_marginTop="@dimen/_5sdp"
             app:layout_constraintTop_toBottomOf="@+id/tv_item_title"
             app:layout_constraintStart_toEndOf="@+id/ll_calendar" />
 
@@ -93,7 +94,11 @@
             android:gravity="center"
             style="@style/Text.Small"
             app:layout_constraintTop_toBottomOf="@+id/v_1"
-            app:layout_constraintStart_toEndOf="@+id/ll_calendar" />
+            app:layout_constraintStart_toEndOf="@+id/ll_calendar"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:drawablePadding="@dimen/_8sdp"
+            android:drawableTint="@color/black"
+            android:layout_marginTop="@dimen/_2sdp"/>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_address"
@@ -102,14 +107,19 @@
             android:text="@string/address"
             android:drawableStart="@drawable/ic_baseline_location_on_24"
             style="@style/Text.Small"
+            android:layout_marginTop="@dimen/_5sdp"
             app:layout_constraintTop_toBottomOf="@+id/tv_service_name"
-            app:layout_constraintStart_toEndOf="@+id/ll_calendar" />
+            app:layout_constraintStart_toEndOf="@+id/ll_calendar"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:drawablePadding="@dimen/_8sdp"
+            android:drawableTint="@color/black"/>
 
         <View
             android:id="@+id/v_2"
             android:layout_width="0dp"
-            android:layout_height="2dp"
-
+            android:layout_height="1.5dp"
+            android:background="@color/grey"
+            android:layout_marginTop="@dimen/_5sdp"
             app:layout_constraintTop_toBottomOf="@+id/tv_address"
             app:layout_constraintStart_toEndOf="@+id/ll_calendar" />
 
