HomeMerchantProduct super tidied

--- a/app/src/main/res/layout/dialog_message_fragment.xml
+++ b/app/src/main/res/layout/dialog_message_fragment.xml
@@ -27,5 +27,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:text="@string/session_has_expired"
         android:gravity="center" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/bt_dialog_ok"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/ok"
+        android:layout_gravity="center_horizontal"/>
+
 </LinearLayout>
